Solution 2